# yj_robot_sdk

./: CMakeLists.txt  README.md
cmake/: yunji_sdkConfig.cmake.in  yunji_sdkTargets.cmake
example/: CMakeLists.txt
example/helloworld/: CMakeLists.txt  publisher.cpp  subscriber.cpp
example/roundtrip/: CMakeLists.txt  RoundTrip.c  RoundTrip.h  ping.c
example/shm/: CMakeLists.txt  HelloWorldData.cpp  HelloWorldData.hpp  HelloWorldData.idl  cyclonedds_shm.xml  publisher.cpp  subscriber.cpp
idl/: BmsData.idl  HelloWorldData.idl  ImuData.idl  JointCommand.idl  JointState.idl
include/yunji/idl/: BmsData.hpp  ImuData.hpp  JointCommand.hpp  JointState.hpp
include/yunji/robot/dds_bridge/: dds_bridge_factory.hpp  dds_bridge_publisher.hpp  dds_bridge_subscriber.hpp  dds_factory_model.hpp
log/: latest_list
src/yunji/: CMakeLists.txt
src/yunji/idl/: BmsData.cpp  ImuData.cpp  JointCommand.cpp  JointState.cpp
src/yunji/robot/dds_bridge/: dds_bridge_factory.cpp  dds_factory_model.cpp
